# ropod

./: README.md
camera_driver/: CMakeLists.txt  package.xml
camera_driver/config/: camera_params.yaml  camera_params.yml
camera_driver/launch/: camera_driver.launch
camera_driver/src/: camera_driver_node.cpp
ropod_description/: CMakeLists.txt  package.xml  ropod.sdf
ropod_description/xacro/: ropod.xacro
ropod_gazebo/: CMakeLists.txt  package.xml
ropod_gazebo/launch/: ropod_sim.launch
ropod_gazebo/models/amk_basement/: amk_basement.sdf  model.config
ropod_gazebo/models/brsu_ground_floor/: brsu_ground_floor.sdf  model.config
ropod_gazebo/models/navigation_sign_left/: model.config  model.sdf
ropod_gazebo/models/navigation_sign_left/materials/scripts/: navigation_sign_left.material
ropod_gazebo/models/navigation_sign_right/: model.config  model.sdf
ropod_gazebo/models/navigation_sign_right/materials/scripts/: navigation_sign_right.material
ropod_gazebo/resources/: amk_basement.stl  brsu_ground_floor.stl
ropod_gazebo/worlds/: amk_basement.world  brsu_ground_floor.world  brsu_ground_floor_C022_dynamic.world  brsu_ground_floor_C022_navigation_signs.world  brsu_ground_floor_full_demo.world  brsu_ground_floor_full_demo_dynamic.world
